deploy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployment-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /frontend/           # Route all requests to the frontend service
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80  # Frontend service port
  - http:
      paths:
      - path: /tasks        # Route requests with /api path to the backend service
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80  # Backend service port
